--- a/src/MenuResto.css
+++ b/src/MenuResto.css
@@ -3,6 +3,7 @@
     padding: 10px;
     color: white;
     border-radius: 10px;
+    margin-bottom: 5px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
